# cpp-utility-types

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  compile_commands.json
include/cut/: error.hpp  ids.hpp  result.hpp
test/: CMakeLists.txt  error_tests.cpp  result_tests.cpp
